#30 Specify extension directory (#33)
* #30: Added command line flag for extension folder

* Extract db connection config from query url

* Read bucketfs file size as float

* Add tests for parameter validation

* Upgrade dependencies

* Add operation IDs
