# restAPI/restApi.go
@@ -4,15 +4,17 @@ import (
 	"context"
 	"database/sql"
 	"fmt"
+	"log"
 	"net/http"
+	"strconv"
 	"sync"
 
 	cont "github.com/exasol/extension-manager/extensionController"
 
 	"github.com/exasol/exasol-driver-go"
 	"github.com/gin-gonic/gin"
+	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
-	"github.com/swaggo/gin-swagger/swaggerFiles"
 
 	// docs are generated by Swag CLI, you have to import it.
 	_ "github.com/exasol/extension-manager/generatedApiDocs"
@@ -37,6 +39,8 @@ type RestAPI interface {
 // @license.url   https://github.com/exasol/extension-manager/blob/main/LICENSE
 
 // @BasePath  /
+// @accept json
+// @produce json
 
 func Create(controller cont.ExtensionController) RestAPI {
 	return &restAPIImpl{Controller: controller}
@@ -57,12 +61,15 @@ func (restApi *restAPIImpl) Serve() {
 	router := gin.Default()
 	router.GET("/extensions", restApi.handleGetExtensions)
 	router.GET("/installations", restApi.handleGetInstallations)
-	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
+
+	const port = "8080"
 	srv := &http.Server{
-		Addr:    ":8080",
+		Addr:    ":" + port,
 		Handler: router,
 	}
 	restApi.server = srv
+	log.Printf("Starting server on port %s...\n", port)
 	err := restApi.server.ListenAndServe() // blocking
 	if err != nil && !restApi.isStopped() {
 		panic(fmt.Sprintf("failed to start rest API server. Cause: %v", err.Error()))
@@ -100,12 +107,13 @@ func (restApi *restAPIImpl) Stop() {
 
 // @Summary      Get all extensions
 // @Description  Get a list of all available extensions.
+// @Id  getExtensions
 // @Produce      json
 // @Success      200  {object}  ExtensionsResponse
-// @Param 	     dbHost query string true "Hostname of the Exasol DB to manage"
-// @Param 	     dbPort query int true "port number of the Exasol DB to manage"
-// @Param 	     dbUser query string true "username of the Exasol DB to manage"
-// @Param 	     dbPass query string true "password of the Exasol DB to manage"
+// @Param        dbHost query string true "Hostname of the Exasol DB to manage"
+// @Param        dbPort query int true "port number of the Exasol DB to manage"
+// @Param        dbUser query string true "username of the Exasol DB to manage"
+// @Param        dbPass query string true "password of the Exasol DB to manage"
 // @Failure      500  {object}  string
 // @Router       /extensions [get]
 func (restApi *restAPIImpl) handleGetExtensions(c *gin.Context) {
@@ -145,12 +153,13 @@ type ExtensionsResponseExtension struct {
 
 // @Summary      Get all installations
 // @Description  Get a list of all installations. Installation means, that an extension is installed in the database (e.g. JAR files added to BucketFS, Adapter Script created).
+// @Id           getInstallations
 // @Produce      json
 // @Success      200  {object}  InstallationsResponse
-// @Param 	     dbHost query string true "Hostname of the Exasol DB to manage"
-// @Param 	     dbPort query int true "port number of the Exasol DB to manage"
-// @Param 	     dbUser query string true "username of the Exasol DB to manage"
-// @Param 	     dbPass query string true "password of the Exasol DB to manage"
+// @Param        dbHost query string true "Hostname of the Exasol DB to manage"
+// @Param        dbPort query int true "port number of the Exasol DB to manage"
+// @Param        dbUser query string true "username of the Exasol DB to manage"
+// @Param        dbPass query string true "password of the Exasol DB to manage"
 // @Failure      500  {object}  string
 // @Router       /installations [get]
 func (restApi *restAPIImpl) handleGetInstallations(c *gin.Context) {
@@ -181,7 +190,7 @@ func (restApi *restAPIImpl) getInstallations(c *gin.Context) (*InstallationsResp
 func (restApi *restAPIImpl) sendResponse(c *gin.Context, response interface{}, err error) {
 	if err != nil {
 		c.String(500, "Internal error.")
-		fmt.Println(err.Error())
+		log.Printf("request failed: %s\n", err.Error())
 		return
 	}
 	c.JSON(200, response)
@@ -196,11 +205,42 @@ func closeDbConnection(database *sql.DB) {
 }
 
 func (restApi *restAPIImpl) openDBConnection(c *gin.Context) (*sql.DB, error) {
-	database, err := sql.Open("exasol", exasol.NewConfig(c.GetString("dbUser"), c.GetString("dbPass")).Port(c.GetInt("dbPort")).Host(c.GetString("dbHost")).Autocommit(false).String())
+	config, err := getDbConfig(c)
 	if err != nil {
-		return nil, fmt.Errorf("failed to open a database connection. Cause: %v", err.Error())
+		return nil, fmt.Errorf("failed to get db config: %w", err)
+	}
+	config.Autocommit(false).ValidateServerCertificate(false)
+	database, err := sql.Open("exasol", config.String())
+	if err != nil {
+		return nil, fmt.Errorf("failed to open a database connection. Cause: %w", err)
 	}
 	return database, nil
+}
+
+func getDbConfig(c *gin.Context) (*exasol.DSNConfigBuilder, error) {
+	query := c.Request.URL.Query()
+	host := query.Get("dbHost")
+	if host == "" {
+		return nil, fmt.Errorf("missing parameter dbHost")
+	}
+	portString := query.Get("dbPort")
+	if portString == "" {
+		return nil, fmt.Errorf("missing parameter dbPort")
+	}
+	port, err := strconv.Atoi(portString)
+	if err != nil {
+		return nil, fmt.Errorf("invalid value %q for parameter dbPort", portString)
+	}
+	user := query.Get("dbUser")
+	if user == "" {
+		return nil, fmt.Errorf("missing parameter dbUser")
+	}
+	password := query.Get("dbPass")
+	if password == "" {
+		return nil, fmt.Errorf("missing parameter dbPass")
+	}
+	config := exasol.NewConfig(user, password).Port(port).Host(host)
+	return config, nil
 }
 
 type InstallationsResponse struct {
